<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.io-labs</groupId>
	<artifactId>leaf-payment</artifactId>
	<version>1.131-SNAPSHOT</version>
	<name>leaf-payment</name>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>17</maven.compiler.release>
		<spring.version>2.7.18</spring.version>
		<leaf.version>1.131-SNAPSHOT</leaf.version>
	</properties>

	<dependencies>
		<!-- Leaf dependencies -->
		<dependency>
			<groupId>fr.io-labs</groupId>
			<artifactId>leaf</artifactId>
			<version>${leaf.version}</version>
		</dependency>

		<!-- Spring dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
			<version>${spring.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Jackson Date Serializer dependency -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.13.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- Stripe -->
		<dependency>
			<groupId>com.stripe</groupId>
			<artifactId>stripe-java</artifactId>
			<version>24.24.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
		  <id>github</id>
		  <name>GitHub Packages</name>
		  <url>https://maven.pkg.github.com/input-output-labs/leaf</url>
		</repository>
	</distributionManagement>
</project>
